# reliabots

./: LICENSE  README.md  VennABERS_test.ipynb  icp.py  ivap.py  setup.cfg
src/conformal_predictors/: calibrutils.py  icp.py  nc_measures.py  xicp.py
src/reliabots/: calibrutils.py  icp.py  ivap.py  xcp.py
tests/: basic_test.py
