[metadata]
name = conformal_predictors-patpizio
version = 0.1.0
author = Patrizio Giovannotti
author_email = patrizio.giovannotti.2019@live.rhul.ac.uk
description = Conformal Prediction in many flavours
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patpizio/conformal_predictors
project_urls =
    Bug Tracker = https://github.com/patpizio/conformal_predictors/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scikit-learn
    scipy
    plotly
    pandas

[options.packages.find]
where = src