[metadata]
name = reliabots
version = 0.2.7
author = Patrizio Giovannotti
author_email = patrizio.giovannotti.2019@live.rhul.ac.uk
description = Improve the reliability of machine learning models with conformal prediction
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/patpizio/reliabots
project_urls =
    Bug Tracker = https://github.com/patpizio/reliabots/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires = 
    numpy
    scikit-learn
    scipy
    plotly>=4.14.3
    kaleido>=0.2.1
    pandas
    nonconformist>=2.1.0

[options.packages.find]
where = src
